; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/chemical/extr_bme680_core.c_bme680_compensate_temp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/chemical/extr_bme680_core.c_bme680_compensate_temp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bme680_data = type { i32, %struct.bme680_calib }
%struct.bme680_calib = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bme680_data*, i32)* @bme680_compensate_temp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bme680_compensate_temp(%struct.bme680_data* %0, i32 %1) #0 {
  %3 = alloca %struct.bme680_data*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bme680_calib*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.bme680_data* %0, %struct.bme680_data** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load %struct.bme680_data*, %struct.bme680_data** %3, align 8
  %11 = getelementptr inbounds %struct.bme680_data, %struct.bme680_data* %10, i32 0, i32 1
  store %struct.bme680_calib* %11, %struct.bme680_calib** %5, align 8
  %12 = load %struct.bme680_calib*, %struct.bme680_calib** %5, align 8
  %13 = getelementptr inbounds %struct.bme680_calib, %struct.bme680_calib* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %20, label %16

16:                                               ; preds = %2
  %17 = load %struct.bme680_data*, %struct.bme680_data** %3, align 8
  %18 = load %struct.bme680_calib*, %struct.bme680_calib** %5, align 8
  %19 = call i32 @bme680_read_calib(%struct.bme680_data* %17, %struct.bme680_calib* %18)
  br label %20

20:                                               ; preds = %16, %2
  %21 = load i32, i32* %4, align 4
  %22 = ashr i32 %21, 3
  %23 = load %struct.bme680_calib*, %struct.bme680_calib** %5, align 8
  %24 = getelementptr inbounds %struct.bme680_calib, %struct.bme680_calib* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = shl i32 %25, 1
  %27 = sub nsw i32 %22, %26
  store i32 %27, i32* %6, align 4
  %28 = load i32, i32* %6, align 4
  %29 = load %struct.bme680_calib*, %struct.bme680_calib** %5, align 8
  %30 = getelementptr inbounds %struct.bme680_calib, %struct.bme680_calib* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = mul nsw i32 %28, %31
  %33 = ashr i32 %32, 11
  store i32 %33, i32* %7, align 4
  %34 = load i32, i32* %6, align 4
  %35 = ashr i32 %34, 1
  %36 = load i32, i32* %6, align 4
  %37 = ashr i32 %36, 1
  %38 = mul nsw i32 %35, %37
  %39 = ashr i32 %38, 12
  store i32 %39, i32* %8, align 4
  %40 = load i32, i32* %8, align 4
  %41 = load %struct.bme680_calib*, %struct.bme680_calib** %5, align 8
  %42 = getelementptr inbounds %struct.bme680_calib, %struct.bme680_calib* %41, i32 0, i32 2
  %43 = load i32, i32* %42, align 4
  %44 = shl i32 %43, 4
  %45 = mul nsw i32 %40, %44
  %46 = ashr i32 %45, 14
  store i32 %46, i32* %8, align 4
  %47 = load i32, i32* %7, align 4
  %48 = load i32, i32* %8, align 4
  %49 = add nsw i32 %47, %48
  %50 = load %struct.bme680_data*, %struct.bme680_data** %3, align 8
  %51 = getelementptr inbounds %struct.bme680_data, %struct.bme680_data* %50, i32 0, i32 0
  store i32 %49, i32* %51, align 4
  %52 = load %struct.bme680_data*, %struct.bme680_data** %3, align 8
  %53 = getelementptr inbounds %struct.bme680_data, %struct.bme680_data* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = mul nsw i32 %54, 5
  %56 = add nsw i32 %55, 128
  %57 = ashr i32 %56, 8
  store i32 %57, i32* %9, align 4
  %58 = load i32, i32* %9, align 4
  ret i32 %58
}

declare dso_local i32 @bme680_read_calib(%struct.bme680_data*, %struct.bme680_calib*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
